<?xml version="1.0"?>
<package format="3">
  <name>rosiwit_slam</name>
  <version>1.0.0</version>
  <description>ROS2 SLAM package for multi-sensor fusion localization and mapping</description>

  <maintainer email="ai_dev_team@example.com">AI Development Team</maintainer>
  <license>MIT</license>

  <url type="website">https://github.com/example/rosiwit_slam</url>
  <url type="repository">https://github.com/example/rosiwit_slam.git</url>

  <author email="ai_dev_team@example.com">AI Development Team</author>

  <!-- ==================== 构建依赖 ==================== -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>std_srvs</depend>
  <depend>pcl_conversions</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- PCL -->
  <build_depend>libpcl-all-dev</build_depend>
  <exec_depend>libpcl-all</exec_depend>

  <!-- Eigen -->
  <depend>eigen</depend>

  <!-- yaml-cpp (可选) -->
  <depend>yaml-cpp</depend>

  <!-- ==================== 测试依赖 ==================== -->
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ==================== 导出 ==================== -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>